# meadow

./: README.md  pyproject.toml
assets/: out.detect.json  out.detect.txt  out.json  out.txt  response.json
meadow/: main.py  video.py
